fix header + navbar bg alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -533,24 +533,24 @@ Navbar CSS
 =================================================*/
 #header {
     &.headroom {
-        position: fixed;
-        width: 100vw;
-        z-index: 9998;
-        top: 0;
-        left: 0;
-        background-color: transparent;
-        transition: .3s;
-        padding-top: 15px;
-       
-        &.is-sticky {
-            box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
-            // background-color: $main-color !important;
-            background: transparent url(/images/hero-image1.svg) left top repeat-x;
-            padding: {
-                top: 15px;
-                bottom: 15px;
-            };
-        }
+      position: fixed;
+      width: 100vw;
+      z-index: 9998;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      transition: .3s;
+      padding-top: 15px;
+  
+      &.is-sticky {
+        box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
+        background: transparent url(/images/hero-image1.svg) left top repeat-x;
+        background-size: 100%;
+        padding: {
+          top: 15px;
+          bottom: 15px;
+        };
+      }
     }
     &.headroom--pinned {
         transform: translateY(0%);
@@ -560,8 +560,9 @@ Navbar CSS
         opacity: 0;
         visibility: hidden;
     }
-}
-.startp-nav {
+  }
+  
+  .startp-nav {
     background: transparent;
     color: $white-color-400;
 
@@ -767,33 +768,30 @@ Main Banner CSS
     min-height: 300px;
     z-index: 1;
     background: transparent url(/images/hero-image1.svg) left top repeat-x;
-    background-size: cover;
+    background-size: 100%; 
     justify-content: center;
-
+  
     .hero-content {
-        background: url(/images/melsoft-text.svg) center center no-repeat;
-        // max-width: 500px;
-        width: auto;
-        min-height: 100px;
-        background-size: contain; 
-        background-position: center center;
-        // justify-self: center;
-        // padding: 1rem 1rem 1rem 1rem;
-
-        h1 {
-            font: {
-                size: 45px;
-                weight: 500;
-            }
-            color: $white-color;
-            margin-bottom: 20px;
+      background: url(/images/melsoft-text.svg) center center no-repeat;
+      width: auto;
+      min-height: 100px;
+      background-size: contain; 
+      background-position: center center;
+  
+      h1 {
+        font: {
+          size: 45px;
+          weight: 500;
         }
-        p {
-            margin-bottom: 30px;
-            color: $white-color;
-        }
+        color: $white-color;
+        margin-bottom: 20px;
+      }
+      p {
+        margin-bottom: 30px;
+        color: $white-color;
+      }
     }
-}
+  }
 
 .shape1 {
     position: absolute;
